Refactor home header

--- a/pages/globals.css
+++ b/pages/globals.css
@@ -17,48 +17,48 @@
   }
 
   :root {
-    --background: 220 37% 96%;
-    --foreground: 213deg 26% 7%;
-    --card: 220 37% 100%;
+    --background: 220 40% 98%;
+    --foreground: 213deg 5% 8%;
+    --card: 220 40% 100%;
     --card-foreground: 213deg 26% 7%;
     --popover: var(--card);
     --popover-foreground: var(--card-foreground);
     --primary: 220 74% 50%;
-    --primary-foreground: 210 40% 98%;
+    --primary-foreground: 220 40% 98%;
     --secondary: 40 74% 50%;
-    --secondary-foreground: 210 40% 98%;
-    --muted: 220 37% 96%;
-    --muted-foreground: 215 16% 33%;
-    --accent: 220 37% 88%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-    --destructive: 0 57.5% 43.47%;
+    --secondary-foreground: 210 40% 2%;
+    --muted: 220 40% 96%;
+    --muted-foreground: 220 8% 44%;
+    --accent: 220 40% 92%;
+    --accent-foreground: 222 47% 11%;
+    --destructive: 0 57% 43%;
     --destructive-foreground: 210 40% 98%;
-    --border: 220 18% 90%;
+    --border: 220 20% 90%;
     --input: var(--border);
     --ring: var(--primary);
     --radius: 0.5rem;
-    --base: 220 74% 50%;
-    --base-foreground: 210 40% 98%;
+    --cover: 220 80% 67%;
+    --cover-foreground: 210 40% 98%;
   }
 
   :is(html[class~="dark"] body) {
-    --background: 220 32% 5%;
+    --background: 220 32% 7%;
     --foreground: 0 0% 98%;
-    --card: 220 32% 7%;
+    --card: 220 32% 10%;
     --card-foreground: 0 0% 98%;
     /* --popover: var(--card); */
     /* --popover-foreground: var(--card-foreground); */
     --primary: 220 84% 59%;
-    --primary-foreground: 210 40% 98%;
+    --primary-foreground: 220 40% 98%;
     --secondary: 40 74% 50%;
-    --secondary-foreground: 210 40% 98%;
-    --muted: 220 32% 11%;
-    --muted-foreground: 240 5% 64.9%;
-    --accent: 220 32% 14%;
+    --secondary-foreground: 210 40% 2%;
+    --muted: 220 32% 14%;
+    --muted-foreground: 220 18% 64%;
+    --accent: 220 32% 18%;
     --accent-foreground: 0 0% 98%;
-    --destructive: 359 61% 31%;
+    --destructive: 359 78% 55%;
     --destructive-foreground: 210 40% 98%;
-    --border: 220 16% 12%;
+    --border: 220 25% 16%;
     /* --input: var(--border); */
     /* --ring: var(--primary); */
     --cover: 220 64% 39%;
